Bug 1318999 - Revoke MediaDataDecoder callback after RemoteVideoDecoder has been shut down. r=jya

--HG--
extra : rebase_source : 095eebbd7e2457a52aa7679d666ca10da3459259